* Adding execution of script.

--- a/.ply/config/aliases.properties
+++ b/.ply/config/aliases.properties
@@ -1,1 +1,3 @@
 octo=exec -Pexec.programArg0\=server -Pexec.programArg1\=src/main/resources/local.yml
+server-deploy=install -Pproject.packaging\=war `scp -i ${local.build-pem} target/octo-receiver-1.0.war ubuntu@${local.build-server}:/tmp`
+ssh=`echo "-i ${local.build-pem} ubuntu@${local.build-server}"` -Pply.decorated\=false
