* Fail the example curl invocation on error. | * Properly print out result code on error.

--- a/src/main/resources/local-scriptargs.yml
+++ b/src/main/resources/local-scriptargs.yml
@@ -1,4 +1,4 @@
-script: curl -X POST http://localhost:8082/tasks/gc
+script: curl -f -X POST http://localhost:8082/tasks/foo
 
 onlyUseScriptArgs: true
 
