--- a/.ply/config/exclusions.properties
+++ b/.ply/config/exclusions.properties
@@ -1,3 +1,11 @@
-org.slf4j:slf4j-api=1.6.6
+org.slf4j:slf4j-api=1.6.6 1.7.2
 com.google.guava:guava=11.0.2
 com.google.code.findbugs:jsr305=1.3.9
+com.fasterxml.jackson.core:jackson-core=2.1.1 2.1.2
+com.fasterxml.jackson.core:jackson-databind=2.1.2 2.1.1
+com.fasterxml.jackson.core:jackson-annotations=2.1.1
+ch.qos.logback:logback-classic=1.0.7
+ch.qos.logback:logback-core=1.0.7
+com.sun.jersey:jersey-server=1.15
+org.eclipse.jetty:jetty-server=8.1.8.v20121106
+joda-time:joda-time=2.1
