--- a/.ply/config/exclusions.properties
+++ b/.ply/config/exclusions.properties
@@ -8,4 +8,5 @@ ch.qos.logback:logback-classic=1.0.7
 ch.qos.logback:logback-core=1.0.7
 com.sun.jersey:jersey-server=1.15
 org.eclipse.jetty:jetty-server=8.1.8.v20121106
-joda-time:joda-time=2.1
+commons-codec:commons-codec=1.3
+joda-time:joda-time=2.1 2.2
