* Upgrading to dropwizard 0.7.1

--- a/.ply/config/exclusions.properties
+++ b/.ply/config/exclusions.properties
@@ -1,12 +1,15 @@
-org.slf4j:slf4j-api=1.6.6 1.7.2
-com.google.guava:guava=11.0.2
-com.google.code.findbugs:jsr305=1.3.9
-com.fasterxml.jackson.core:jackson-core=2.1.1 2.1.2
-com.fasterxml.jackson.core:jackson-databind=2.1.2 2.1.1
-com.fasterxml.jackson.core:jackson-annotations=2.1.1
-ch.qos.logback:logback-classic=1.0.7
-ch.qos.logback:logback-core=1.0.7
-com.sun.jersey:jersey-server=1.15
-org.eclipse.jetty:jetty-server=8.1.8.v20121106
 commons-codec:commons-codec=1.3
-joda-time:joda-time=2.1 2.2
+com.fasterxml.jackson.core:jackson-annotations=2.1.1 2.2.2
+com.google.guava:guava=13.0.1 15.0
+org.slf4j:slf4j-api=1.7.2 1.7.5 1.7.5
+com.fasterxml.jackson.core:jackson-core=2.1.1 2.2.2
+joda-time:joda-time=2.1
+com.fasterxml.jackson.core:jackson-databind=2.1.1 2.2.2
+ch.qos.logback:logback-classic=1.0.13
+ch.qos.logback:logback-core=1.0.13
+org.eclipse.jetty:jetty-server=9.0.4.v20130625 9.0.7.v20131107
+org.slf4j:jcl-over-slf4j=1.7.2
+org.eclipse.jetty:jetty-util=9.0.7.v20131107
+org.eclipse.jetty:jetty-io=9.0.7.v20131107
+org.eclipse.jetty:jetty-http=9.0.7.v20131107
+com.sun.jersey:jersey-server=1.17.1
