--- a/src/main/resources/local-scriptargs.yml
+++ b/src/main/resources/local-scriptargs.yml
@@ -19,6 +19,8 @@ codeDeploymentConfiguration:
     codeDeploymentScript: src/main/resources/test.sh
     codeCheckoutScript: src/main/resources/test.sh
     deploymentEmail: unknown
+    projectName: unknown
+    environment: unknown
     awsAccessKey: unknown
     awsSecretKey: unknown
 
