--- a/src/main/resources/local-scriptargs.yml
+++ b/src/main/resources/local-scriptargs.yml
@@ -1,4 +1,4 @@
-script: curl -f -X POST 'http://localhost:8082/tasks/foo?project=foo&env=staging'
+script: curl -f -X POST http://localhost:8082/tasks/foo
 
 onlyUseScriptArgs: true
 
