* Configuring object-mapper after dropwizard upgrade.

--- a/.ply/config/aliases.properties
+++ b/.ply/config/aliases.properties
@@ -1,3 +1,3 @@
-octo=exec -Pexec.programArg0\=server -Pexec.programArg1\=${octo.yml}
+octo=exec -Pexec.programArg0\=server -Pexec.programArg1\=${octo.yml} -Pexec.jvm.opts\='-agentlib:jdwp\=transport\=dt_socket,server\=y,suspend\=n,address\=5005'
 server-deploy=install -Pproject.packaging\=war `scp -i ${local.build-pem} target/octo-receiver-1.0.war ubuntu@${local.build-server}:/tmp`
 ssh=`echo "-i ${local.build-pem} ubuntu@${local.build-server}"` -Pply.decorated\=false
