* Pass the branch name to code checkout script

--- a/src/main/resources/local-scriptargs.yml
+++ b/src/main/resources/local-scriptargs.yml
@@ -1,4 +1,4 @@
-script: curl -f -X POST http://localhost:8082/tasks/foo&branch=${branch}
+script: curl -f -X POST http://localhost:8082/tasks/foo?branch=${branch}
 
 onlyUseScriptArgs: true
 
