--- a/.ply/config/exclusions.properties
+++ b/.ply/config/exclusions.properties
@@ -3,7 +3,7 @@ com.fasterxml.jackson.core:jackson-annotations=2.1.1 2.2.2
 com.google.guava:guava=13.0.1 15.0
 org.slf4j:slf4j-api=1.7.2 1.7.5 1.7.5
 com.fasterxml.jackson.core:jackson-core=2.1.1 2.2.2
-joda-time:joda-time=2.1
+joda-time:joda-time=2.1 2.3
 com.fasterxml.jackson.core:jackson-databind=2.1.1 2.2.2
 ch.qos.logback:logback-classic=1.0.13
 ch.qos.logback:logback-core=1.0.13
